--- a/app/src/main/res/layout/item_list_tweet_profile.xml
+++ b/app/src/main/res/layout/item_list_tweet_profile.xml
@@ -30,6 +30,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:padding="0dp"
+            android:layout_marginStart="3dp"
+            android:src="@mipmap/ic_launcher"
             app:layout_constraintBottom_toBottomOf="@id/profileDisplayName"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toEndOf="@id/profileDisplayName"
@@ -41,6 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:singleLine="true"
+            android:layout_marginStart="3dp"
             app:layout_constraintBottom_toBottomOf="@id/profileDisplayName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/profileVerified"
