--- a/app/src/main/res/layout/item_list_tweet.xml
+++ b/app/src/main/res/layout/item_list_tweet.xml
@@ -48,6 +48,7 @@
             tools:visibility="visible"/>
 
         <include
+            android:id="@+id/tweetQuotedContainer"
             layout="@layout/item_list_tweet_retweet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
