트윗 클릭에 대한 이펙트 추가

--- a/app/src/main/res/layout/item_list_tweet.xml
+++ b/app/src/main/res/layout/item_list_tweet.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:foreground="?android:attr/selectableItemBackground"
     android:padding="10dp">
 
     <ImageView
@@ -16,6 +17,7 @@
         tools:src="@mipmap/ic_launcher" />
 
     <LinearLayout
+        android:id="@+id/tweetContentContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
