--- a/app/src/main/res/layout/item_list_tweet_media.xml
+++ b/app/src/main/res/layout/item_list_tweet_media.xml
@@ -8,7 +8,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:elevation="0dp"
+        app:cardElevation="0dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
