--- a/app/src/main/res/layout/item_list_tweet_counts.xml
+++ b/app/src/main/res/layout/item_list_tweet_counts.xml
@@ -7,33 +7,6 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:id="@+id/tweetCommentContainer"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/tweetRetweetContainer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/tweetCommentImage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            tools:src="@mipmap/ic_launcher" />
-
-        <TextView
-            android:id="@+id/tweetCommentCount"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="5dp"
-            android:gravity="center"
-            tools:text="123" />
-
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/tweetRetweetContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -41,14 +14,14 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tweetLikedContainer"
-        app:layout_constraintStart_toEndOf="@id/tweetCommentContainer"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/tweetRetweetImage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            tools:src="@mipmap/ic_launcher" />
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/ic_retweet_off_24dp"/>
 
         <TextView
             android:id="@+id/tweetRetweetCount"
@@ -73,9 +46,9 @@
 
         <ImageView
             android:id="@+id/tweetLikedImage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            tools:src="@mipmap/ic_launcher" />
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/ic_favorite_off_24dp"/>
 
         <TextView
             android:id="@+id/tweetLikedCount"
