--- a/app/src/main/res/layout/item_list_tweet_profile.xml
+++ b/app/src/main/res/layout/item_list_tweet_profile.xml
@@ -31,12 +31,11 @@
             android:layout_height="0dp"
             android:padding="0dp"
             android:layout_marginStart="3dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/ic_verified_user_24dp"
             app:layout_constraintBottom_toBottomOf="@id/profileDisplayName"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toEndOf="@id/profileDisplayName"
-            app:layout_constraintTop_toTopOf="@id/profileDisplayName"
-            tools:src="@mipmap/ic_launcher" />
+            app:layout_constraintTop_toTopOf="@id/profileDisplayName"/>
 
         <TextView
             android:id="@+id/profileName"
