--- a/app/src/main/res/layout/item_list_tweet.xml
+++ b/app/src/main/res/layout/item_list_tweet.xml
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            style="@style/TweetContentTextStyle"
             android:id="@+id/tweetContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
