--- a/app/src/main/res/layout/item_list_tweet_profile.xml
+++ b/app/src/main/res/layout/item_list_tweet_profile.xml
@@ -16,6 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            style="@style/UserNameTextStyle"
             android:id="@+id/profileDisplayName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,6 +39,7 @@
             app:layout_constraintTop_toTopOf="@id/profileDisplayName"/>
 
         <TextView
+            style="@style/UserInfoTextStyle"
             android:id="@+id/profileName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -52,6 +54,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
+        style="@style/UserInfoTextStyle"
         android:id="@+id/tweetCreated"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
