--- a/app/src/main/res/layout/item_list_tweet_media.xml
+++ b/app/src/main/res/layout/item_list_tweet_media.xml
@@ -13,10 +13,11 @@
         android:orientation="vertical"
         android:background="@drawable/bg_corner_round_15dp">
 
-        <com.teleclinic.bulent.smartimageview.SmartImageViewLayout
+        <com.inkiu.twittersample.ui.common.view.GridImageLayout
             android:id="@+id/mediaMultiImageView"
             android:layout_width="match_parent"
-            android:layout_height="150dp" />
+            android:layout_height="150dp"
+            app:shape="SQUARE"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/singleMediaContainer"
