--- a/app/src/main/res/layout/layout_profile.xml
+++ b/app/src/main/res/layout/layout_profile.xml
@@ -20,33 +20,40 @@
             android:layout_height="100dp"
             android:src="@mipmap/ic_launcher_round"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="TODO" />
 
         <TextView
+            style="@style/UserNameTextStyle"
             android:id="@+id/profileDisplayName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             app:layout_constraintStart_toEndOf="@id/profileImageView"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:text="Display Name" />
 
         <TextView
+            style="@style/UserInfoTextStyle"
             android:id="@+id/profileName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/profileImageView"
             app:layout_constraintTop_toBottomOf="@id/profileDisplayName"
             tools:text="Real Name" />
 
         <TextView
             android:id="@+id/profileDescription"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:maxLines="2"
             app:layout_constraintStart_toEndOf="@id/profileImageView"
             app:layout_constraintTop_toBottomOf="@id/profileName"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:text="User Description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -60,6 +67,7 @@
         app:layout_constraintTop_toBottomOf="@id/profileTopContainer">
 
         <TextView
+            style="@style/UserInfoTextStyle"
             android:id="@+id/profilePlace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -67,14 +75,7 @@
             tools:text="User Place" />
 
         <TextView
-            android:id="@+id/profileUrl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:singleLine="true"
-            tools:text="User URL" />
-
-        <TextView
+            style="@style/UserInfoTextStyle"
             android:id="@+id/profileCreateDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -92,20 +93,36 @@
         android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@id/profileCenterContainer">
 
-    <TextView
-        android:id="@+id/profileFollowingCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        tools:text="User Created" />
+        <TextView
+            android:id="@+id/profileFollowingCount"
+            style="@style/UserNameTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            tools:text="123"/>
 
-    <TextView
-        android:id="@+id/profileFollowerCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:singleLine="true"
-        tools:text="User Created" />
+        <TextView
+            style="@style/UserInfoTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
+            android:text="@string/following"/>
+
+        <TextView
+            android:id="@+id/profileFollowerCount"
+            style="@style/UserNameTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:singleLine="true"
+            tools:text="456" />
+
+        <TextView
+            style="@style/UserInfoTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
+            android:text="@string/follower" />
 
     </LinearLayout>
 
