--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,10 @@
         <item name="buttonStyle">@style/Widget.AppCompat.Button.Colored</item>
     </style>
 
+    <style name="DetailAppBarStyle" parent="Widget.Design.AppBarLayout">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
     <style name="UserInfoTextStyle" parent="@android:style/TextAppearance">
         <item name="android:textColor">@color/black</item>
     </style>
