--- a/app/src/main/res/layout/layout_profile.xml
+++ b/app/src/main/res/layout/layout_profile.xml
@@ -19,7 +19,7 @@
             android:id="@+id/profileImageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@mipmap/ic_launcher_round"
+            android:src="@drawable/ic_face_24dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="TODO" />
@@ -59,12 +59,23 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/profileCenterContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="10dp">
+
+        <ImageView
+            android:id="@+id/profilePlaceImage"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:src="@drawable/ic_person_location_24dp"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/profilePlace"/>
 
         <TextView
             style="@style/UserInfoTextStyle"
@@ -72,18 +83,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:singleLine="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/profilePlaceImage"
             tools:text="User Place" />
+
+        <ImageView
+            android:id="@+id/profileDateImage"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:padding="1dp"
+            android:src="@drawable/ic_calendar_24dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/profilePlace"/>
 
         <TextView
             style="@style/UserInfoTextStyle"
             android:id="@+id/profileCreateDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:singleLine="true"
-            tools:text="User Created" />
+            android:layout_marginStart="1dp"
+            tools:text="User Created"
+            app:layout_constraintStart_toEndOf="@id/profileDateImage"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:id="@+id/profileBottomContainer"
