--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,7 +23,7 @@
                 android:layout_height="match_parent"
                 android:padding="5dp"
                 android:layout_marginStart="5dp"
-                android:src="@mipmap/ic_launcher_round"
+                android:src="@drawable/ic_face_24dp"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
