--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,19 @@
         <item name="android:textColor">@color/kinda_black</item>
     </style>
 
+    <style name="UserInfoTextStyleLight" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="UserNameTextStyleLight" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TweetContentTextStyleLight" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/light_grey</item>
+    </style>
+
     <style name="Divider">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0.5dp</item>
